[tool.poetry]
name = "krfzf.py"
version = "0.0.5"
description = "Fzf.py - A Pythonic Fzf Wrapper"
authors = ["justfoolingaround <kr.justfoolingaround@gmail.com>"]
license = "GPTv3"
readme = "readme.txt"
packages = [{ include = "fzf" }, { include = "fzf/**/*.py" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
